# Road2AI

./: .gitignore  README.md  investigate_phapdien.py  phase1_summary.md  pyproject.toml  requirements-gpu.txt  requirements.txt
R2AI_VBPL/: articles.json
R2AI_VBPL/filtered/: filtered_by_agency_type_active_after_20231128.json
R2AI_VBPL/filtered/json/: 163591.json  163595.json  163716.json  163721.json  175155.json
data/: Bối cảnh bài toán.docx  Dashboard kết quả.docx  Dữ liệu cuộc thi.docx  Phương pháp đánh giá.docx  R2AI_MENTORDAY2.txt  boi_canh.txt  dashboard.txt  du_lieu.txt  phuong_phap.txt
docs/: full_pipeline_upgrade.md  implementation_plan.md  phase1_completion_report.md  phase2_final_report.md  phase3_4_completion_report.md
scripts/: build_article_corpus.ipynb  evaluate_retrieval_cache.py  local_eval.py  retune_submission.py  run_phase1_chunk.py  run_phase1_collect.py  run_phase2_build_bm25.py  run_phase2_build_qdrant.py  run_phase2_retrieve.py  run_phase3_4.py  run_pipeline.py  validate_submission.py
src/aiguru/: evaluation.py  paths.py  submission.py
src/aiguru/phase1/: chunk.py  collect.py  config.py  metadata_schema.py
src/aiguru/phase2/: bm25_indexer_simple.py  cache.py  config.py  reranker.py  retriever.py  vector_db.py
src/aiguru/phase3/: __init__.py  config.py  generator.py
src/aiguru/phase4/: __init__.py  pipeline.py  postprocess.py  streaming.py
tests/: test_phase3_4.py  test_pipeline_quality.py
