[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiguru-legal-rag"
version = "0.1.0"
description = "AIGuru Vietnamese legal RAG competition pipeline"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.18.0",
    "huggingface_hub>=0.20.0",
]

[tool.setuptools.packages.find]
where = ["src"]
